--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "object-hash": "^2.2.0"
   }
 }
