--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": [
     "@babel/preset-flow",
-    ["@babel/env", { "modules": false }]
+    "@babel/preset-env"
   ],
   "plugins": [
     "@babel/plugin-proposal-object-rest-spread",
