--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,6 @@
 {
   "extends": [
-    "airbnb-base",
-    "plugin:flowtype/recommended"
+    "airbnb-base"
   ],
   "parser": "babel-eslint",
   "rules": {
@@ -14,8 +13,5 @@
     "import/prefer-default-export": 0,
     "lines-between-class-members": 0,
     "arrow-body-style": 0
-  },
-  "plugins": [
-    "flowtype"
-  ]
+  }
 }
