--- a/package.json
+++ b/package.json
@@ -2,23 +2,21 @@
   "name": "method-node",
   "version": "0.1.2",
   "description": "Node.js library for the Method API",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "main": "dist/method.ts",
+  "module": "dist/method.mjs",
+  "typings": "dist/method.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
     "build": "./node_modules/.bin/rollup -c",
-    "dev": "./node_modules/.bin/rollup -c -w",
-    "test": "./node_modules/.bin/mocha --exit --timeout 100000 --require ./node_modules/@babel/register ./test/index.js",
-    "flow": "flow"
+    "dev": "./node_modules/.bin/rollup -c -w"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MethodFi/method-node.git"
   },
   "keywords": [
-    "react",
     "methodfi",
     "method-node"
   ],
@@ -29,33 +27,21 @@
   },
   "homepage": "https://github.com/MethodFi/method-node#readme",
   "devDependencies": {
-    "@babel/cli": "^7.12.8",
-    "@babel/core": "^7.13.14",
-    "@babel/node": "^7.12.6",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.13.12",
-    "@babel/preset-flow": "^7.14.5",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^18.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "babel-eslint": "^10.1.0",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^16.10.3",
     "chai": "^4.3.4",
+    "esbuild": "^0.13.4",
     "eslint": "^7.15.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
-    "flow-bin": "^0.148.0",
     "mocha": "^8.4.0",
-    "rollup": "^2.44.0",
-    "rollup-plugin-flow": "^1.1.1",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup": "^2.58.0",
+    "rollup-plugin-dts": "^4.0.0",
+    "rollup-plugin-esbuild": "^4.5.0",
+    "typescript": "^4.4.3"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "object-hash": "^2.2.0"
+    "axios": "^0.21.1"
   }
 }
