--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "method-node",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "Node.js library for the Method API",
   "main": "dist/method.ts",
   "module": "dist/method.mjs",
@@ -10,7 +10,9 @@
   ],
   "scripts": {
     "build": "./node_modules/.bin/rollup -c",
-    "dev": "./node_modules/.bin/rollup -c -w"
+    "dev": "./node_modules/.bin/rollup -c -w",
+    "pretest": "./node_modules/.bin/tsc -p tsconfig-test.json",
+    "test": "./node_modules/.bin/mocha --exit --timeout 100000 ./test-dist/test/index.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +20,8 @@
   },
   "keywords": [
     "methodfi",
-    "method-node"
+    "method-node",
+    "method"
   ],
   "author": "mdelcarmen",
   "license": "ISC",
@@ -27,6 +30,7 @@
   },
   "homepage": "https://github.com/MethodFi/method-node#readme",
   "devDependencies": {
+    "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.10.3",
     "chai": "^4.3.4",
@@ -39,6 +43,7 @@
     "rollup": "^2.58.0",
     "rollup-plugin-dts": "^4.0.0",
     "rollup-plugin-esbuild": "^4.5.0",
+    "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   },
   "dependencies": {
