--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "method-node",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "Node.js library for the Method API",
-  "main": "dist/index.ts",
-  "module": "dist/index.mjs",
-  "typings": "dist/index.d.ts",
+  "main": "index.ts",
+  "module": "index.mjs",
+  "typings": "index.d.ts",
   "files": [
     "dist"
   ],
