--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,7 @@ jobs:
           npm pack
 
       - name: Public to NPM
+        working-directory: ./dist
         run: |
           npm publish --access public
         env:
