--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "method-node",
-  "version": "0.2.20",
+  "version": "0.3.0",
   "description": "Node.js library for the Method API",
   "main": "dist/index.ts",
   "module": "dist/index.mjs",
-  "typings": "dist/index.d.ts",
+  "typings": "dist/index.ts.d.ts",
   "files": [
     "dist",
     "index.ts"
@@ -31,23 +31,23 @@
   },
   "homepage": "https://github.com/MethodFi/method-node#readme",
   "devDependencies": {
-    "@types/chai": "^4.2.22",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^16.10.3",
-    "chai": "^4.3.4",
-    "esbuild": "^0.13.4",
-    "eslint": "^7.15.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "mocha": "^8.4.0",
-    "rollup": "^2.58.0",
-    "rollup-plugin-dts": "^4.0.0",
-    "rollup-plugin-esbuild": "^4.5.0",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.3"
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^17.0.25",
+    "chai": "^4.3.6",
+    "esbuild": "^0.14.36",
+    "eslint": "^8.13.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.26.0",
+    "mocha": "^9.2.2",
+    "rollup": "^2.70.2",
+    "rollup-plugin-dts": "^4.2.1",
+    "rollup-plugin-esbuild": "^4.9.1",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   },
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.26.1"
   }
 }
