Allow custom axios-retry config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "outDir": "./dist",
     "module": "commonjs",
     "target": "esnext",
+    "esModuleInterop": true,
     "allowJs": false
   },
   "include": ["./src/**/*"]
