--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.45",
     "chai": "^4.3.6",
+    "dotenv": "^16.4.5",
     "esbuild": "^0.14.36",
     "eslint": "^8.13.0",
     "eslint-config-airbnb": "^19.0.4",
