--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "method-node",
-  "version": "0.3.41",
+  "version": "1.0.0",
   "description": "Node.js library for the Method API",
   "main": "dist/index.ts",
   "module": "dist/index.mjs",
@@ -32,9 +32,10 @@
   "homepage": "https://github.com/MethodFi/method-node#readme",
   "devDependencies": {
     "@types/chai": "^4.3.1",
-    "@types/mocha": "^9.1.0",
-    "@types/node": "^17.0.25",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.45",
     "chai": "^4.3.6",
+    "dotenv": "^16.4.5",
     "esbuild": "^0.14.36",
     "eslint": "^8.13.0",
     "eslint-config-airbnb": "^19.0.4",
